web/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dkms-web
  namespace: __WEB_NAMESPACE__
spec:
  selector:
    app: dkms-web
  ports:
  - name: http
    port: 80
    targetPort: 3000
